x added: `controller.done([value])`
x added: `SITEMAP()` as alias to `F.sitemap()`
x added: config key `allow_localize` enables a localization for all `HTML` files
x added: `controller.breadcrumb` returns all sitemap items
x added: `PAUSESERVER(name, pause)` pauses web server (alias for `F.wait()`)

x updated: `$.invalid()` without arguments can return a function `function(err)`
x updated: Mail `unsubscribe` appends new header which enables `unsubscribe` in e.g. iOS
x updated: `MODIFY`, handler contains a new argument `controller`
x updated: `headers` argument in `controller.proxy` supports `flags: []` for REQEUST method
x updated: `.filefs()` and `.filenosql()` supports `download` with `true` or with `(name, type) => 'new_name'` (`filename` will be read from NoSQL binary file)
x updated: `$.done(arg)` argument `@arg` can be `boolean` (response will be as a value) or object/primitive value (`arg` will be as a value)
x updated: `String.arg(obj, [encode], [def])` added `encode` (`true` or `json`) and `def` arguments
x updated: `AUTH(req, res, flags, next)` and `next` function can handle `callback(err, user)`
x updated: `REQUEST()` supports `keepalive` flag
x updated: `bundles` mechanism supports merging files `--filename` between `bundles` files
x updated: `String.hash(true)` returns unsigned int
x updated: `CONF:default_image_converter` supports `magick` for new version of ImageMagick
x updated: `CONF.default_image_consumption` can contain ZERO value which means disabled optimialization of CPU/memory consumption
x updated: `CONF.default_image_consumption` has changed a default value to `0`
x updated: `U.parseXML(str, [replace])` and `String.parseXML([replace])` contains a new argument called `replace`
x updated: `LOAD()` added a callback function
x updated: components support `encoding="utf8"` attribute for `<file` tag (default: `base64`)

- fixed: schemas validation
- fixed: error handling in dynamic schemas
- fixed: CSS variables